[package]
name = "reqwest-drive"
# Generally tracks a compatible upstream `reqwest` release to reduce version ambiguity, while still allowing independent updates when needed
version = "0.13.2-alpha"
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
description = "High-performance caching, throttling, and backoff middleware for reqwest, with a single-file storage container."
repository = "https://github.com/jzombie/rust-reqwest-drive"
edition = "2024"
license = "Apache-2.0"
categories = ["web-programming", "network-programming", "caching", "asynchronous"]
keywords = ["reqwest", "middleware", "cache", "throttle", "backoff"]

[dependencies]
async-trait = "0.1.89"
bitcode = "0.6.9"
bytes = "1.11.1"
cache-manager = { version = "0.3.1", features = ["process-scoped-cache"] }
chrono = "0.4.44"
http = "1.4.0"
rand = "0.10.0"
reqwest = "0.13.2"
reqwest-middleware = "0.5.1"
simd-r-drive = "0.15.5-alpha"
tokio = "1.50.0"
tracing = "0.1.44"

[dev-dependencies]
tempdir = "0.3.7"
tempfile = "3.27.0"
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.23"
wiremock = "0.6.5"
