[package]
name = "reqwest-drive"
# Generally tracks a compatible upstream `reqwest` release to reduce version ambiguity, while still allowing independent updates when needed
version = "0.13.2-alpha.3"
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
description = "High-performance caching, throttling, and backoff middleware for reqwest, with a single-file storage container."
repository = "https://github.com/jzombie/rust-reqwest-drive"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["web-programming", "network-programming", "caching", "asynchronous"]
keywords = ["reqwest", "middleware", "cache", "throttle", "backoff"]

[workspace.dependencies]
async-trait = "0.1.89"
bitcode = "0.6.9"
bytes = "1.11.1"
cache-manager = "0.4.0"
chrono = "0.4.44"
http = "1.4.0"
rand = "0.10.1"
reqwest = "0.13.2"
reqwest-middleware = "0.5.1"
simd-r-drive = "0.16.0-alpha"
tempfile = "3.27.0"
tokio = "1.51.1"
tracing = "0.1.44"
wiremock = "0.6.5"

[dependencies]
async-trait.workspace = true
bitcode.workspace = true
bytes.workspace = true
cache-manager = { workspace = true, features = ["process-scoped-cache"] }
chrono.workspace = true
http.workspace = true
rand.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
simd-r-drive.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
wiremock.workspace = true
